--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-alembic==2.7.6
+alembic==1.7.6
 Flask==1.1.4
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3
 gunicorn==20.1.0
-Jinja2==3.0.3
+Jinja2==2.11.3
 pip==22.0.2
 PyMySQL==1.0.2
 SQLAlchemy==1.3
-Werkzeug==2.0.2
+Werkzeug==1.0.1
 wheel==0.37.1
 yacs==0.1.8
+itsdangerous
+passlib
